<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:map="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".Controller.MapsActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center|bottom">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_maps_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0099CC"
        android:subtitleTextColor="@color/white"
        android:titleTextColor="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

<fragment android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</fragment>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textLocationRaduius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_location_radius"
            android:textSize="17sp"
            android:paddingTop="10sp"
            android:singleLine="true"
            >
        </TextView>
        <TextView android:text=""
            android:id="@+id/seekBar_progress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_alignParentLeft="true">

        </TextView>

        <SeekBar android:id="@+id/location_seekBar"
            android:max="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLocationRaduius"
            android:layout_alignParentLeft="true"
            >
        </SeekBar>

        <TextView
            android:id="@+id/dropPinTxt"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/txt_dropPin"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/purple">
        </TextView>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|bottom"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/btnMapSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:onClick="onMapSaveClicked"
        android:text="@string/map_button_save">
    </Button>

    <Button
        android:id="@+id/btnMapCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onMapCancelClicked"
        android:background="@drawable/button"
        android:text="@string/map_button_cancel" >
    </Button>
</LinearLayout>
</RelativeLayout>
